sysinstall: new component

--- a/man/rules/meson.build
+++ b/man/rules/meson.build
@@ -1169,6 +1169,10 @@ manpages = [
    'systemd-sysext-initrd.service',
    'systemd-sysext.service'],
   'ENABLE_SYSEXT'],
+ ['systemd-sysinstall',
+  '8',
+  ['systemd-sysinstall.service'],
+  'ENABLE_SYSINSTALL'],
  ['systemd-system-update-generator', '8', [], ''],
  ['systemd-system.conf',
   '5',
