--- a/meson.build
+++ b/meson.build
@@ -1632,6 +1632,7 @@ foreach tuple : [
                 ['rfkill'],
                 ['smack'],
                 ['sysext'],
+                ['sysinstall'],
                 ['sysusers'],
                 ['timedated'],
                 ['timesyncd'],
@@ -2418,6 +2419,7 @@ subdir('src/storagetm')
 subdir('src/sulogin-shell')
 subdir('src/sysctl')
 subdir('src/sysext')
+subdir('src/sysinstall')
 subdir('src/system-update-generator')
 subdir('src/systemctl')
 subdir('src/sysupdate')
@@ -3165,6 +3167,7 @@ foreach tuple : [
         ['sysupdate'],
         ['sysupdated'],
         ['sysusers'],
+        ['sysinstall'],
         ['storagetm'],
         ['timedated'],
         ['timesyncd'],
