--- a/meson_options.txt
+++ b/meson_options.txt
@@ -107,6 +107,8 @@ option('sysupdate', type : 'feature', deprecated : { 'true' : 'enabled', 'false'
 option('sysupdated', type: 'combo', value : 'auto',
        choices : ['auto', 'enabled', 'disabled'],
        description : 'install the systemd-sysupdated service')
+option('sysinstall', type : 'boolean',
+       description : 'install the systemd-sysinstall tool')
 
 option('coredump', type : 'boolean',
        description : 'install the coredump handler')
