--- a/mkosi/mkosi.pkgenv/mkosi.conf.d/centos-fedora.conf
+++ b/mkosi/mkosi.pkgenv/mkosi.conf.d/centos-fedora.conf
@@ -1,5 +1,9 @@
 # SPDX-License-Identifier: LGPL-2.1-or-later
 
+[Match]
+Distribution=|fedora
+Distribution=|centos
+
 [Build]
 Environment=
         GIT_URL=https://src.fedoraproject.org/rpms/systemd.git
