--- a/src/test/meson.build
+++ b/src/test/meson.build
@@ -520,6 +520,11 @@ executables += [
                 'type' : 'manual',
         },
         core_test_template + {
+                'sources' : files('test-thp.c'),
+                'dependencies' : common_test_dependencies,
+                'type' : 'manual',
+        },
+        core_test_template + {
                 'sources' : files('test-cgroup-cpu.c'),
         },
         core_test_template + {
