coredump: support new coredump socket interface
Since kernel v6.17, we can set a path to unix socket to core_pattern (with request mode).
See also: https://lore.kernel.org/all/20250603-work-coredump-socket-protocol-v2-0-05a5f0c18ecc@kernel.org/

When systemd-coredump is invoked with '--manager' option, it creates a unix socket to
receive coredumps from the kernel, requests varlink helper to register the socket
to core pattern, and wait for coredumps. When a coredump is received, it forwards
the coredump to the corresponding container if the crashed process is running in
a container, otherwise saves the coredump to the local storage.

--- a/src/coredump/meson.build
+++ b/src/coredump/meson.build
@@ -11,11 +11,13 @@ systemd_coredump_sources = files(
         'coredump-container.c',
         'coredump-context.c',
         'coredump-kernel-helper.c',
+        'coredump-manager.c',
         'coredump-receive.c',
         'coredump-register.c',
         'coredump-send.c',
         'coredump-socket.c',
         'coredump-submit.c',
+        'coredump-worker.c',
 )
 systemd_coredump_extract_sources = files(
         'coredump-vacuum.c',
