[metrics] Introduce metrics API framework
This commit introduces the shared code for the metrics API framework:

- Metrics API definitions
- Code to set up the varlink server
- The describe method which shows all the metrics families
- The list method which lists all the metrics
- Type definitions related to MetricFamily
- Common code to build json objects

--- a/src/shared/meson.build
+++ b/src/shared/meson.build
@@ -126,6 +126,7 @@ shared_sources = files(
         'machine-id-setup.c',
         'macvlan-util.c',
         'main-func.c',
+        'metrics.c',
         'mkdir-label.c',
         'mkfs-util.c',
         'module-util.c',
@@ -206,6 +207,7 @@ shared_sources = files(
         'varlink-io.systemd.MachineImage.c',
         'varlink-io.systemd.ManagedOOM.c',
         'varlink-io.systemd.Manager.c',
+        'varlink-io.systemd.Metrics.c',
         'varlink-io.systemd.MountFileSystem.c',
         'varlink-io.systemd.MuteConsole.c',
         'varlink-io.systemd.NamespaceResource.c',
