--- a/meson.build
+++ b/meson.build
@@ -2404,6 +2404,7 @@ subdir('src/random-seed')
 subdir('src/rc-local-generator')
 subdir('src/remount-fs')
 subdir('src/repart')
+subdir('src/report')
 subdir('src/reply-password')
 subdir('src/resolve')
 subdir('src/rfkill')
