rpm: Rewrite systemd-update-helper in C
Let's rewrite the script in C, which gives us access to
libsystemd-shared for implementing future features.

We immediately make use of libsystemd-shared to add a new --stdin
option, allowing the script to read units to operate on as unit file
paths from stdin. This allows using the script with various hook/trigger
features provided by package managers such as pacman and rpm.

As a bonus, the amount of forks is reduced by not shelling out to
systemctl multiple times which could matter for a script that's
executed quite a few times during every dnf system upgrade.

--- a/meson.build
+++ b/meson.build
@@ -2481,6 +2481,7 @@ subdir('src/tmpfiles')
 subdir('src/tpm2-setup')
 subdir('src/tty-ask-password-agent')
 subdir('src/update-done')
+subdir('src/update-helper')
 subdir('src/update-utmp')
 subdir('src/user-sessions')
 subdir('src/userdb')
