--- a/src/test/meson.build
+++ b/src/test/meson.build
@@ -346,6 +346,7 @@ executables += [
         test_template + {
                 'sources' : files('test-libcrypt-util.c'),
                 'dependencies' : libcrypt,
+                'conditions' : ['HAVE_LIBCRYPT'],
                 'timeout' : 120,
         },
         test_template + {
