rpm: Add post uninstall file triggers to remove units
We would prefer to use %transfiletriggerin scriptlets to stop units
before starting the transaction, but those don't work the way we need
them to (see discussion in
https://github.com/rpm-software-management/rpm/discussions/4016) as paths
passed via stdin will include all files on upgrade of the systemd package
and we cannot figure out which files will be removed.

Instead, let's use %filetriggerpostun hooks which does seem to receive
only paths that were removed. It does mean we need extra checks to see
if the update-helper binary is still installed and new enough since we'll
only run the file trigger after uninstallation of each package instead of
before the transaction.

We don't implement the file triggers for the lua triggers yet as it doesn't
seem to have a non-deprecated way to pass stdin to a subprocess (see
https://github.com/rpm-software-management/rpm/discussions/4029).

--- a/src/rpm/triggers.systemd.sh.in
+++ b/src/rpm/triggers.systemd.sh.in
@@ -19,6 +19,28 @@
 %transfiletriggerin -P 900899 -- {{USER_DATA_UNIT_DIR}}/ /etc/systemd/user/
 {{SYSTEMD_UPDATE_HELPER_PATH}} user-reload-restart || :
 
+# %filetriggerpostun runs after a package was removed/upgraded/downgraded, which means it might run with
+# older versions of systemd or without systemd installed anymore at all, so we add checks to make sure the
+# systemd-update-helper binary is still installed and is recent enough.
+
+%filetriggerpostun -P 1000100 -- {{SYSTEM_DATA_UNIT_DIR}}/ /etc/systemd/system/
+if ! [ -x "{{SYSTEMD_UPDATE_HELPER_PATH}}" ]; then
+  exit 0
+fi
+{ read -r -d '' -n 3 shebang; } <{{SYSTEMD_UPDATE_HELPER_PATH}}
+if ! [ "$shebang" = "#!/" ]; then
+  exec {{SYSTEMD_UPDATE_HELPER_PATH}} --stdin --system remove-units
+fi
+
+%filetriggerpostun -P 1000099 -- {{USER_DATA_UNIT_DIR}}/ /etc/systemd/user/
+if ! [ -x "{{SYSTEMD_UPDATE_HELPER_PATH}}" ]; then
+  exit 0
+fi
+{ read -r -d '' -n 3 shebang; } <{{SYSTEMD_UPDATE_HELPER_PATH}}
+if ! [ "$shebang" = "#!/" ]; then
+  exec {{SYSTEMD_UPDATE_HELPER_PATH}} --stdin --global remove-units
+fi
+
 %transfiletriggerpostun -P 1000100 -- {{SYSTEM_DATA_UNIT_DIR}}/ /etc/systemd/system/
 # On removal, we need to run daemon-reload after any units have been
 # removed.
