coredump: introduce varlink interface to register socket core pattern
Since kernel v6.17, we can set a path to unix socket to core_pattern (with request mode).
See also: https://lore.kernel.org/all/20250603-work-coredump-socket-protocol-v2-0-05a5f0c18ecc@kernel.org/

This adds new mode to invoke systemd-coredump executable. When invoked with
'--register' option, it accepts a varlink method to set new core pattern to
/proc/sys/kernel/core_pattern. This is necessary as the core pattern cannot
be registered from sandboxed environment, but we'd like to run the main
service, which will be added in later commit, in a sandbox.

--- a/src/coredump/meson.build
+++ b/src/coredump/meson.build
@@ -11,6 +11,7 @@ systemd_coredump_sources = files(
         'coredump-context.c',
         'coredump-kernel-helper.c',
         'coredump-receive.c',
+        'coredump-register.c',
         'coredump-send.c',
         'coredump-submit.c',
 )
