pull: add OCI support

--- a/src/import/meson.build
+++ b/src/import/meson.build
@@ -30,12 +30,14 @@ executables += [
                 'name' : 'systemd-pull',
                 'public' : true,
                 'sources' : files(
+                        'curl-util.c',
+                        'oci-util.c',
                         'pull.c',
+                        'pull-common.c',
+                        'pull-job.c',
+                        'pull-oci.c',
                         'pull-raw.c',
                         'pull-tar.c',
-                        'pull-job.c',
-                        'pull-common.c',
-                        'curl-util.c',
                 ),
                 'objects' : ['systemd-importd'],
                 'dependencies' : common_deps + [
@@ -92,7 +94,10 @@ executables += [
                 'dependencies' : common_deps,
                 'type' : 'manual',
         },
-
+        test_template + {
+                'sources' : files('test-oci-util.c', 'oci-util.c'),
+                'dependencies' : common_deps,
+        },
 ]
 
 install_data('org.freedesktop.import1.conf',
@@ -108,3 +113,28 @@ install_data('org.freedesktop.import1.policy',
 install_data('import-pubring.pgp',
              install_dir : libexecdir)
 # TODO: shouldn't this be in pkgdatadir?
+
+ocireg_files = [
+        'registry.docker.io.ocireg',
+        'registry.fedora.ocireg',
+]
+ocireg_symlinks = [
+        [ 'default.ocireg',              'registry.' + get_option('default-oci-registry')  + '.ocireg' ],
+        [ 'image.alpine.ocireg',         'registry.docker.io.ocireg'                                   ],
+        [ 'image.archlinux.ocireg',      'registry.docker.io.ocireg'                                   ],
+        [ 'image.debian.ocireg',         'registry.docker.io.ocireg'                                   ],
+        [ 'image.fedora-minimal.ocireg', 'registry.fedora.ocireg'                                      ],
+        [ 'image.fedora.ocireg',         'registry.fedora.ocireg'                                      ],
+        [ 'image.ubuntu.ocireg',         'registry.docker.io.ocireg'                                   ],
+]
+
+foreach file : ocireg_files
+        install_data('ocireg' / file,
+                     install_dir : libexecdir / 'ocireg')
+endforeach
+
+foreach tuple: ocireg_symlinks
+        install_symlink(tuple[0],
+                        pointing_to : tuple[1],
+                        install_dir : libexecdir / 'ocireg')
+endforeach
