--- a/src/import/meson.build
+++ b/src/import/meson.build
@@ -14,12 +14,14 @@ systemd_importd_extract_sources = files(
 )
 
 systemd_pull_sources = files(
+        'curl-util.c',
+        'oci-util.c',
         'pull.c',
+        'pull-common.c',
+        'pull-job.c',
+        'pull-oci.c',
         'pull-raw.c',
         'pull-tar.c',
-        'pull-job.c',
-        'pull-common.c',
-        'curl-util.c',
 )
 
 systemd_import_sources = files(
@@ -103,7 +105,10 @@ executables += [
                 'dependencies' : common_deps,
                 'type' : 'manual',
         },
-
+        test_template + {
+                'sources' : files('test-oci-util.c', 'oci-util.c'),
+                'dependencies' : common_deps,
+        },
 ]
 
 install_data('org.freedesktop.import1.conf',
@@ -119,3 +124,28 @@ install_data('org.freedesktop.import1.policy',
 install_data('import-pubring.pgp',
              install_dir : libexecdir)
 # TODO: shouldn't this be in pkgdatadir?
+
+ocireg_files = [
+        'registry.docker.io.ocireg',
+        'registry.fedora.ocireg',
+]
+ocireg_symlinks = [
+        [ 'default.ocireg',              'registry.' + get_option('default-oci-registry')  + '.ocireg' ],
+        [ 'image.alpine.ocireg',         'registry.docker.io.ocireg'                                   ],
+        [ 'image.archlinux.ocireg',      'registry.docker.io.ocireg'                                   ],
+        [ 'image.debian.ocireg',         'registry.docker.io.ocireg'                                   ],
+        [ 'image.fedora-minimal.ocireg', 'registry.fedora.ocireg'                                      ],
+        [ 'image.fedora.ocireg',         'registry.fedora.ocireg'                                      ],
+        [ 'image.ubuntu.ocireg',         'registry.docker.io.ocireg'                                   ],
+]
+
+foreach file : ocireg_files
+        install_data('ocireg' / file,
+                     install_dir : libexecdir / 'ocireg')
+endforeach
+
+foreach tuple: ocireg_symlinks
+        install_symlink(tuple[0],
+                        pointing_to : tuple[1],
+                        install_dir : libexecdir / 'ocireg')
+endforeach
