meson: refuse to build when gcrypt support is enabled bu libgpg-error not found
Follow-up for 066e603ac641e22b1827ce36c9d55311fa44be6e.

(cherry picked from commit 5123d9d38ca6406d93a2aa32841dc5de66de39f9)

--- a/meson.build
+++ b/meson.build
@@ -1315,7 +1315,7 @@ feature = get_option('gcrypt')
 libgcrypt = dependency('libgcrypt',
                        required : feature)
 libgpg_error = dependency('gpg-error',
-                          required : feature.disabled() ? feature : false)
+                          required : feature)
 
 have = libgcrypt.found() and libgpg_error.found()
 if not have
