--- a/meson.build
+++ b/meson.build
@@ -2422,6 +2422,7 @@ subdir('src/measure')
 subdir('src/modules-load')
 subdir('src/mount')
 subdir('src/mountfsd')
+subdir('src/mstack')
 subdir('src/mute-console')
 subdir('src/network')
 subdir('src/notify')
