--- a/meson.build
+++ b/meson.build
@@ -1001,6 +1001,13 @@ librt = cc.find_library('rt')
 libm = cc.find_library('m')
 libdl = cc.find_library('dl')
 
+if meson.version().version_compare('>=1.1.0')
+        libucontext = dependency('libucontext', required : get_option('libucontext').enable_if(get_option('libc') == 'musl'))
+else
+        libucontext = dependency('libucontext', required : get_option('libucontext'))
+endif
+conf.set10('HAVE_LIBUCONTEXT', libucontext.found())
+
 # On some distributions that use musl (e.g. Alpine), libintl.h may be provided by gettext rather than musl.
 # In that case, we need to explicitly link with libintl.so.
 if cc.has_function('dgettext',
@@ -2080,6 +2087,7 @@ libsystemd_includes = [basic_includes, include_directories(
         'src/libsystemd/sd-common',
         'src/libsystemd/sd-device',
         'src/libsystemd/sd-event',
+        'src/libsystemd/sd-future',
         'src/libsystemd/sd-hwdb',
         'src/libsystemd/sd-id128',
         'src/libsystemd/sd-journal',
@@ -2115,6 +2123,7 @@ libsystemd = shared_library(
                      libbasic_static],
         link_whole : [libsystemd_static],
         dependencies : [librt,
+                        libucontext,
                         threads,
                         userspace],
         link_depends : libsystemd_sym,
@@ -2140,6 +2149,7 @@ if static_libsystemd != 'false'
                                 liblz4_cflags,
                                 libm,
                                 librt,
+                                libucontext,
                                 libxz_cflags,
                                 libzstd_cflags,
                                 threads,
