--- a/src/systemd/meson.build
+++ b/src/systemd/meson.build
@@ -36,6 +36,7 @@ _not_installed_headers = [
         'sd-dhcp6-option.h',
         'sd-dhcp6-protocol.h',
         'sd-dns-resolver.h',
+        'sd-future.h',
         'sd-ipv4acd.h',
         'sd-ipv4ll.h',
         'sd-lldp-rx.h',
