shell-completion: add bash script for varlinkctl
(cherry picked from commit f16518ce862f5d0dc4d8098dd87b3ef3a5d719fe)

--- a/shell-completion/bash/meson.build
+++ b/shell-completion/bash/meson.build
@@ -34,6 +34,7 @@ items = [['busctl',              ''],
          ['udevadm',             ''],
          ['bootctl',             ''],
          ['run0',                ''],
+         ['varlinkctl',          ''],
          ['coredumpctl',         'ENABLE_COREDUMP'],
          ['homectl',             'ENABLE_HOMED'],
          ['hostnamectl',         'ENABLE_HOSTNAMED'],
