--- a/shell-completion/bash/meson.build
+++ b/shell-completion/bash/meson.build
@@ -17,46 +17,47 @@ custom_target(
         install : bashcompletiondir != 'no',
         install_dir : bashcompletiondir)
 
-items = [['busctl',              ''],
-         ['journalctl',          ''],
-         ['systemd-analyze',     ''],
-         ['systemd-cat',         ''],
-         ['systemd-cgls',        ''],
-         ['systemd-cgtop',       ''],
-         ['systemd-creds',       ''],
-         ['systemd-delta',       ''],
-         ['systemd-detect-virt', ''],
-         ['systemd-id128',       ''],
-         ['systemd-nspawn',      'ENABLE_NSPAWN'],
-         ['systemd-path',        ''],
-         ['systemd-run',         ''],
-         ['systemd-vpick',       ''],
-         ['udevadm',             ''],
-         ['bootctl',             ''],
-         ['run0',                ''],
-         ['varlinkctl',          ''],
-         ['coredumpctl',         'ENABLE_COREDUMP'],
-         ['homectl',             'ENABLE_HOMED'],
-         ['hostnamectl',         'ENABLE_HOSTNAMED'],
-         ['importctl',           'ENABLE_IMPORTD'],
-         ['kernel-install',      'ENABLE_KERNEL_INSTALL'],
-         ['localectl',           'ENABLE_LOCALED'],
-         ['loginctl',            'ENABLE_LOGIND'],
-         ['machinectl',          'ENABLE_MACHINED'],
-         ['networkctl',          'ENABLE_NETWORKD'],
-         ['oomctl',              'ENABLE_OOMD'],
-         ['portablectl',         'ENABLE_PORTABLED'],
-         ['resolvectl',          'ENABLE_RESOLVE'],
-         ['systemd-cryptenroll', 'HAVE_LIBCRYPTSETUP'],
-         ['systemd-confext',     'ENABLE_SYSEXT'],
-         ['systemd-dissect',     'HAVE_BLKID'],
-         ['systemd-resolve',     'ENABLE_RESOLVE'],
-         ['systemd-sysext',      'ENABLE_SYSEXT'],
-         ['systemd-vmspawn',     'ENABLE_VMSPAWN'],
-         ['timedatectl',         'ENABLE_TIMEDATED'],
-         ['userdbctl',           'ENABLE_USERDB']]
+foreach item : [
+        ['bootctl',             ''],
+        ['busctl',              ''],
+        ['coredumpctl',         'ENABLE_COREDUMP'],
+        ['homectl',             'ENABLE_HOMED'],
+        ['hostnamectl',         'ENABLE_HOSTNAMED'],
+        ['importctl',           'ENABLE_IMPORTD'],
+        ['journalctl',          ''],
+        ['kernel-install',      'ENABLE_KERNEL_INSTALL'],
+        ['localectl',           'ENABLE_LOCALED'],
+        ['loginctl',            'ENABLE_LOGIND'],
+        ['machinectl',          'ENABLE_MACHINED'],
+        ['networkctl',          'ENABLE_NETWORKD'],
+        ['oomctl',              'ENABLE_OOMD'],
+        ['portablectl',         'ENABLE_PORTABLED'],
+        ['resolvectl',          'ENABLE_RESOLVE'],
+        ['run0',                ''],
+        ['systemd-analyze',     ''],
+        ['systemd-cat',         ''],
+        ['systemd-cgls',        ''],
+        ['systemd-cgtop',       ''],
+        ['systemd-confext',     'ENABLE_SYSEXT'],
+        ['systemd-creds',       ''],
+        ['systemd-cryptenroll', 'HAVE_LIBCRYPTSETUP'],
+        ['systemd-delta',       ''],
+        ['systemd-detect-virt', ''],
+        ['systemd-dissect',     'HAVE_BLKID'],
+        ['systemd-id128',       ''],
+        ['systemd-nspawn',      'ENABLE_NSPAWN'],
+        ['systemd-path',        ''],
+        ['systemd-resolve',     'ENABLE_RESOLVE'],
+        ['systemd-run',         ''],
+        ['systemd-sysext',      'ENABLE_SYSEXT'],
+        ['systemd-vmspawn',     'ENABLE_VMSPAWN'],
+        ['systemd-vpick',       ''],
+        ['timedatectl',         'ENABLE_TIMEDATED'],
+        ['udevadm',             ''],
+        ['userdbctl',           'ENABLE_USERDB'],
+        ['varlinkctl',          ''],
+]
 
-foreach item : items
         if bashcompletiondir != 'no' and (item[1] == '' or conf.get(item[1]) == 1)
                 install_data(item[0],
                              install_dir : bashcompletiondir)
