--- a/shell-completion/zsh/meson.build
+++ b/shell-completion/zsh/meson.build
@@ -12,37 +12,38 @@ custom_target(
         install : zshcompletiondir != 'no',
         install_dir : zshcompletiondir)
 
-items = [['_busctl',                   ''],
-         ['_journalctl',               ''],
-         ['_systemd-analyze',          ''],
-         ['_systemd-delta',            ''],
-         ['_systemd-nspawn',           ''],
-         ['_systemd',                  ''],
-         ['_systemd-path',             ''],
-         ['_systemd-run',              ''],
-         ['_run0',                     ''],
-         ['_udevadm',                  ''],
-         ['_varlinkctl',               ''],
-         ['_kernel-install',           'ENABLE_KERNEL_INSTALL'],
-         ['_sd_bus_address',           ''],
-         ['_sd_hosts_or_user_at_host', ''],
-         ['_sd_outputmodes',           ''],
-         ['_sd_unit_files',            ''],
-         ['_sd_machines',              ''],
-         ['_bootctl',                  ''],
-         ['_coredumpctl',              'ENABLE_COREDUMP'],
-         ['_hostnamectl',              'ENABLE_HOSTNAMED'],
-         ['_localectl',                'ENABLE_LOCALED'],
-         ['_loginctl',                 'ENABLE_LOGIND'],
-         ['_machinectl',               'ENABLE_MACHINED'],
-         ['_networkctl',               'ENABLE_NETWORKD'],
-         ['_oomctl',                   'ENABLE_OOMD'],
-         ['_systemd-inhibit',          'ENABLE_LOGIND'],
-         ['_resolvectl',               'ENABLE_RESOLVE'],
-         ['_systemd-tmpfiles',         'ENABLE_TMPFILES'],
-         ['_timedatectl',              'ENABLE_TIMEDATED']]
+foreach item : [
+        ['_bootctl',                  ''],
+        ['_busctl',                   ''],
+        ['_coredumpctl',              'ENABLE_COREDUMP'],
+        ['_hostnamectl',              'ENABLE_HOSTNAMED'],
+        ['_journalctl',               ''],
+        ['_kernel-install',           'ENABLE_KERNEL_INSTALL'],
+        ['_localectl',                'ENABLE_LOCALED'],
+        ['_loginctl',                 'ENABLE_LOGIND'],
+        ['_machinectl',               'ENABLE_MACHINED'],
+        ['_networkctl',               'ENABLE_NETWORKD'],
+        ['_oomctl',                   'ENABLE_OOMD'],
+        ['_resolvectl',               'ENABLE_RESOLVE'],
+        ['_run0',                     ''],
+        ['_sd_bus_address',           ''],
+        ['_sd_hosts_or_user_at_host', ''],
+        ['_sd_machines',              ''],
+        ['_sd_outputmodes',           ''],
+        ['_sd_unit_files',            ''],
+        ['_systemd',                  ''],
+        ['_systemd-analyze',          ''],
+        ['_systemd-delta',            ''],
+        ['_systemd-inhibit',          'ENABLE_LOGIND'],
+        ['_systemd-nspawn',           ''],
+        ['_systemd-path',             ''],
+        ['_systemd-run',              ''],
+        ['_systemd-tmpfiles',         'ENABLE_TMPFILES'],
+        ['_timedatectl',              'ENABLE_TIMEDATED'],
+        ['_udevadm',                  ''],
+        ['_varlinkctl',               ''],
+]
 
-foreach item : items
         if zshcompletiondir != 'no' and (item[1] == '' or conf.get(item[1]) == 1)
                 install_data(item[0],
                              install_dir : zshcompletiondir)
