coredump: introduce coredump_process_socket() to handle new coredump socket protocol
The function process socket connection between the kernel and process
the protocol to receive coredump through the socket, which is supported
since the kernel v6.17.
See also: https://lore.kernel.org/all/20250603-work-coredump-socket-protocol-v2-0-05a5f0c18ecc@kernel.org/

This is currently not used. Preparation for later change.

--- a/src/coredump/meson.build
+++ b/src/coredump/meson.build
@@ -13,6 +13,7 @@ systemd_coredump_sources = files(
         'coredump-receive.c',
         'coredump-register.c',
         'coredump-send.c',
+        'coredump-socket.c',
         'coredump-submit.c',
 )
 systemd_coredump_extract_sources = files(
