coredump: introduce new container interface
When invoked with '--container' option, which is run in a container,
systemd-coredump accepts varlink connection to transfer coredump from
the host to the container.

The new container interface is currently not used.
Preparation for later commit.

--- a/src/coredump/meson.build
+++ b/src/coredump/meson.build
@@ -8,6 +8,7 @@ systemd_coredump_sources = files(
         'coredump.c',
         'coredump-backtrace.c',
         'coredump-config.c',
+        'coredump-container.c',
         'coredump-context.c',
         'coredump-kernel-helper.c',
         'coredump-receive.c',
