--- a/mkosi/mkosi.conf.d/ubuntu/mkosi.conf.d/non-x86.conf
+++ b/mkosi/mkosi.conf.d/ubuntu/mkosi.conf.d/non-x86.conf
@@ -7,4 +7,6 @@ Architecture=!x86
 Release=noble
 
 [Build]
-SandboxTrees=%D/mkosi/mkosi.conf.d/ubuntu/noble-backports-ports.sources:/etc/apt/sources.list.d/noble-backports-ports.sources
+SandboxTrees=
+        %D/mkosi/mkosi.conf.d/ubuntu/noble-backports-ports.sources:/etc/apt/sources.list.d/noble-backports-ports.sources
+        %D/mkosi/mkosi.conf.d/ubuntu/qemu-noble-proposed.pref:/etc/apt/preferences.d/qemu-noble-proposed.pref
