tree-wide: Use meson test -q
meson test output is extremely verbose, printing
a separate line for each successful test. Let's
add -q/--quiet everywhere so it only prints full
lines for skipped and failed tests.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -124,7 +124,8 @@ jobs:
             --no-stdsplit \
             --num-processes "$(($(nproc) - 1))" \
             --timeout-multiplier 2 \
-            --max-lines 300
+            --max-lines 300 \
+            --quiet
 
       - name: Archive failed test journals
         uses: actions/upload-artifact@v4
