--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -80,7 +80,7 @@ jobs:
         run: mkosi box -- env CC=clang CXX=clang++ meson setup -Dlocalegen-path=/usr/bin/locale-gen -Dcompat-mutable-uid-boundaries=true build
 
       - name: Run clang-tidy
-        run: mkosi box -- meson test -C build --suite=clang-tidy --print-errorlogs --no-stdsplit
+        run: mkosi box -- meson test -C build --suite=clang-tidy --print-errorlogs --no-stdsplit --quiet
 
       - name: Build with musl
         run: mkosi box -- .github/workflows/build-test-musl.sh
