--- a/.github/workflows/mkosi.yml
+++ b/.github/workflows/mkosi.yml
@@ -178,7 +178,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
-      - uses: systemd/mkosi@9e31235211d975bae25622d6205a8396d104335e
+      - uses: yuwata/mkosi@9407a07a1ef9df9ea65dc3bd44ece59e45093264
 
       # Freeing up disk space with rm -rf can take multiple minutes. Since we don't need the extra free space
       # immediately, we remove the files in the background. However, we first move them to a different location
